--- a/paper-kit-2-angular-master/src/assets/sass/paper-kit/_collapse.scss
+++ b/paper-kit-2-angular-master/src/assets/sass/paper-kit/_collapse.scss
@@ -1,30 +1,30 @@
-.panel {
-    border: 0;
-    border-bottom: 1px solid $medium-gray;
-    box-shadow: none;
-}
-.panel-default > .panel-heading {
-    background-color: $white-color;
-    border-color: $white-color;
-}
-.panel-group .panel{
-    border-radius: 0;
-}
-.panel-title{
-    font-size: $font-size-h5;
-    a{
-        display: block;
-        padding: .75rem;
-    }
-    i{
-        float: right;
-        padding-top: 5px;
-    }
-}
-.panel-title a:hover,
-.panel-title a:focus{
-    text-decoration: none;
-}
+// .panel {
+//     border: 0;
+//     border-bottom: 1px solid $medium-gray;
+//     box-shadow: none;
+// }
+// .panel-default > .panel-heading {
+//     background-color: $white-color;
+//     border-color: $white-color;
+// }
+// .panel-group .panel{
+//     border-radius: 0;
+// }
+// .panel-title{
+//     font-size: $font-size-h5;
+//     a{
+//         display: block;
+//         padding: .75rem;
+//     }
+//     i{
+//         float: right;
+//         padding-top: 5px;
+//     }
+// }
+// .panel-title a:hover,
+// .panel-title a:focus{
+//     text-decoration: none;
+// }
 .gsdk-collapse{
     display: block;
     height: 0px;
@@ -46,12 +46,12 @@
 .card-collapse{
     padding: 0 !important;
 }
-.panel-title a[aria-expanded="true"]{
-    i{
-        -webkit-transform: rotate(180deg);
-        -ms-transform: rotate(180deg);
-        transform: rotate(180deg);
-        @include transition($slow-transition-time, $transition-linear)
+// .panel-title a[aria-expanded="true"]{
+//     i{
+//         -webkit-transform: rotate(180deg);
+//         -ms-transform: rotate(180deg);
+//         transform: rotate(180deg);
+//         @include transition($slow-transition-time, $transition-linear)
 
-    }
-}
+//     }
+// }
