--- a/paper-kit-2-angular-master/src/app/components/product/product.component.css
+++ b/paper-kit-2-angular-master/src/app/components/product/product.component.css
@@ -162,4 +162,23 @@ ul li {
 mat-slider {
   width: 400px;
 }
+.btn-search{
+  width: 70px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  background: transparent;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  -ms-flex-pack: center;
+  justify-content: center;
+  align-items: center;
+}
   
