--- a/paper-kit-2-angular-master/src/app/components/product/product.component.html
+++ b/paper-kit-2-angular-master/src/app/components/product/product.component.html
@@ -6,17 +6,20 @@
                 <div class="title-brand">
                     <div class="angular-logo">
                     </div>
-                    <h1 class="presentation-title">C-Pharmacy</h1>
-                    <div class="fog-low">
-                        <img src="assets/img/fog-low.png" alt="">
-                    </div>
-                    <div class="fog-low right">
-                        <img src="assets/img/fog-low.png" alt="">
+                    <div class="m-3 p-2">
+                        <legend>WHAT ARE YOU LOOKING FOR?</legend>
+                        <div class="" style="position: relative;">
+                            <input type="text" class="form-control" [(ngModel)]="search"(input)="Search()" placeholder="Search..." />
+                            <button type="button" class="btn-search" >
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
     </div>
         <section class="mt-3 mb-3">
             <div class="container">
@@ -66,7 +69,28 @@
                     <div class="col-sm-9">
                         <div class="features_items">
                             <h2>Features Items</h2>
-                            <app-card-product></app-card-product>
+                            <!-- <app-card-product></app-card-product> -->
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6" *ngFor="let item of products">
+                                    <div class="card">
+                                        <a class="text-center">
+                                            <img class="" style="width:100%; max-width: 200px; max-height: 200px;" src="data:image/jpg;base64,{{item.Imgs[0].ImgName}}" />
+                                        </a>
+                                        <div class="card-body text-black">
+                                            <div class="product-name text-center">
+                                                <h5>{{item.ProductName}}</h5>
+                                            </div>
+                                            <div class="text-center">
+                                                <h5>{{item.Price}} VND</h5>
+                                            </div>
+                                            <div class="row justify-content-center text-center">
+                                                <button [routerLink]="['/productdetail', item.ProductCode]" mat-button color="primary" >View</button>
+                                                <button class="btn btn-danger col-lg-4 col-md-4 col-sm-4 col-xs-4">add</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
