--- a/paper-kit-2-angular-master/src/app/components/cart/cart.component.html
+++ b/paper-kit-2-angular-master/src/app/components/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="page-header page-header-xs" data-parallax="true" style="background-image: url('./assets/img/fabio-mangione.jpg');">
+<div class="page-header page-header-xs" data-parallax="true" style="background-image: url('https://image.freepik.com/free-vector/pharmacy-banner-people-medicines-buyers-queue-pharmacists-sellers_109722-577.jpg');">
     <div class="filter"></div>
 </div>
 <div class="wrapper">
