--- a/paper-kit-2-angular-master/src/app/components/card-new-product/card-new-product.component.html
+++ b/paper-kit-2-angular-master/src/app/components/card-new-product/card-new-product.component.html
@@ -1,6 +1,6 @@
 <p-carousel [value]="products" [numVisible]="4" [numScroll]="3" [circular]="false" [responsiveOptions]="responsiveOptions">
     <ng-template let-item pTemplate="item">
-        <div class="cart-form mr-2 pt-2 pl-2 pr-2" >
+        <div class="cart-form pt-2 pl-2 pr-2 text-center">
             <a class="text-center">
                 <img class="" style="width:100%; max-width: 200px; min-height: 170px; max-height: 170px;" src="{{item.Imgs[0].ImgName}}" />
             </a>
