--- a/paper-kit-2-angular-master/src/app/components/product/product.component.html
+++ b/paper-kit-2-angular-master/src/app/components/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="page-header page-header-xs section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
+    <div class="page-header page-header-xs section-dark" style="background-image: url('https://forwardbaltimore.files.wordpress.com/2019/05/pill-background.jpg?w=1200')">
         <div class="content-center">
             <div class="container">
                 <div class="title-brand">
