--- a/paper-kit-2-angular-master/src/app/shared/footer/footer.component.html
+++ b/paper-kit-2-angular-master/src/app/shared/footer/footer.component.html
@@ -1,95 +1,33 @@
-<footer class="page-footer font-small" style="background-color: #000000e3; display: flow-root !important;">
-    <div class="container text-center text-md-left">
-      <div class="row" style="color: white;">
-        <div class="col-md-4 mx-auto">
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">About</h5>
-          <p>Trường Đại học Công nghệ Thông tin TPHCM </p>
-          <p>Trường Đại học Công nghệ Thông tin TPHCM </p>
-          <p>Trường Đại học Công nghệ Thông tin TPHCM </p>
+<footer class="page-footer font-small" style="background-color: #34363A; display: flow-root !important;">
+  <div class="container" style="padding:40px;">
+    <div class="row">
+        <div class="col-lg-9 row footer p-2" style="color:lightgrey">
+            <ul class="col-lg-4 col-md-4" style="list-style:none">
+                <li><h4>Thông tin</h4></li>
+                <address>
+                    Trường Đại học Công nghệ Thông tin<br />
+                    Khu phố 6, P.Linh Trung, Q.Thủ Đức, TP.Hồ Chí Minh.<br />
+                    <abbr title="Phone"> SĐT:</abbr>
+                    (028) 372 51993
+                </address>
+            </ul>
+            <ul class="col-lg-4  col-md-4" style="list-style:none">
+                <li><h4>Tài khoản</h4></li>
+                <li><a >Tài khoản của bạn</a></li>
+                <li><a >Lịch sử mua hàng</a></li>
+            </ul>
+            <ul class="col-lg-4  col-md-4" style="list-style:none">
+                <li><h4>Thông tin thêm</h4></li>
+                <li><a >Thương hiệu</a></li>
+            </ul>
         </div>
-        <hr class="clearfix w-100 d-md-none">
-        <div class="col-md-2 mx-auto">
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-            <li>
-              <a href="#!">Link 4</a>
-            </li>
-          </ul>
+        <div class="col-lg-3 border-fix" style="color:lightgrey">
+            <div class="rectangle p-2">
+                <h4>Thông tin liên hệ</h4>
+                <h5>Địa chỉ: UIT</h5>
+                <h5>Thời gian mở cửa : 7AM - 9PM</h5>
+            </div>
         </div>
-        <hr class="clearfix w-100 d-md-none">
-        <div class="col-md-2 mx-auto">
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-            <li>
-              <a href="#!">Link 4</a>
-            </li>
-          </ul>
-  
-        </div>
-        <hr class="clearfix w-100 d-md-none">
-        <div class="col-md-2 mx-auto">
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-            <li>
-              <a href="#!">Link 4</a>
-            </li>
-          </ul>
-  
-        </div>
-      </div>
     </div>
-    <hr>
-    <ul class="list-unstyled list-inline text-center py-2">
-      <li class="list-inline-item">
-        <h5 class="mb-1">Register for free</h5>
-      </li>
-      <li class="list-inline-item">
-        <a href="#!" class="btn btn-danger btn-rounded">Sign up!</a>
-      </li>
-    </ul>
-    <hr>
-    <ul class="list-unstyled list-inline text-center">
-      <li class="list-inline-item">
-        <a class="btn-floating btn-fb mx-1">
-          <i class="fa fa-facebook"></i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-tw mx-1">
-          <i class="fa fa-twitter"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-gplus mx-1">
-          <i class="fa fa-google"> </i>
-        </a>
-      </li>
-    </ul>
-  </footer>
+</div>
+</footer>
