--- a/paper-kit-2-angular-master/src/app/components/components.component.html
+++ b/paper-kit-2-angular-master/src/app/components/components.component.html
@@ -1,21 +1,25 @@
 <div class="wrapper">
-    <div class="page-header page-header-xs section-dark" style="background-image: url('assets/img/b1.jpg')">
+    <div class="page-header section-dark" style="background-image: url('assets/img/b1.jpg')">
         <div class="content-center">
             <div class="container">
                 <div class="title-brand">
                     <div class="angular-logo">
                     </div>
                     <h1 class="presentation-title">C-Pharmacy</h1>
-                    <div class="fog-low">
-                        <img src="assets/img/fog-low.png" alt="">
-                    </div>
-                    <div class="fog-low right">
-                        <img src="assets/img/fog-low.png" alt="">
+                    <div class="m-3 p-2" style="z-index: 999;">
+                        <legend style="width: 300px;">Bạn muốn tìm gì?</legend>
+                        <div class="" style="position: relative;">
+                            <input type="text" class="form-control" [(ngModel)]="search"  placeholder="Nhập tên sản phẩm..." />
+                            <button type="button" class="btn-search" [routerLink]="['/search', search]" >
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
     </div>
     <div class="main">
       <div class="section">
