--- a/paper-kit-2-angular-master/src/app/shared/navbar/navbar.component.html
+++ b/paper-kit-2-angular-master/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
-        <div class="navbar-translate" style="padding-bottom: 15px;">
+        <div class="navbar-translate">
             <a href="" class="navbar-brand">Pharmacy</a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
@@ -10,32 +10,33 @@
         </div>
         <div class="navbar-collapse justify-content-center ml-4" id="navbarToggler">
             <ul class="navbar-nav justify-content-center">
-                <li class="nav-item" *ngIf="!isDocumentation()">
+                <li class="nav-item" *ngIf="!isDocumentation()" style="display: flex;align-items: center;">
                     <a class="nav-link" [routerLink]="['/home']" rel="tooltip" data-placement="bottom">
                         Trang chủ
                     </a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
+                <li class="nav-item" *ngIf="!isDocumentation()" style="display: flex;align-items: center;">
                     <a class="nav-link" [routerLink]="['product']" rel="tooltip" data-placement="bottom">
                         Sản phẩm
                     </a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
+                <li class="nav-item" *ngIf="!isDocumentation()" style="display: flex;align-items: center;">
                     <a class="nav-link" rel="tooltip" data-placement="bottom" target="_blank">
                         Blog
                     </a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
+                <li class="nav-item" *ngIf="!isDocumentation()" style="display: flex;align-items: center;">
                     <a class="nav-link" [routerLink]="['/contact']" rel="tooltip" data-placement="bottom">
                         Liên hệ
                     </a>
                 </li>
-                <div class="nav-item" *ngIf="!isDocumentation()">
-                    <div class="row icons">
-                        <a class="nav-link" style="height: 39px;" [routerLink]="['/signin']" rel="tooltip" data-placement="bottom"><mat-icon style="width: 15px;height: 15px;">person</mat-icon></a>
+                <li class="nav-item" *ngIf="!isDocumentation()" style="display: flex;align-items: center;">
+                    <div class="row icons align-items-center">
+                        <a class="d-flex align-items-center" *ngIf="authSvc.getToken() == null" class="nav-link"  [routerLink]="['/signin']" rel="tooltip" data-placement="bottom"><mat-icon style="width: 15px;height: 15px;">person</mat-icon></a>
+                        <a class="d-flex align-items-center" *ngIf="authSvc.getToken() != null" class="nav-link" [routerLink]="['/user-profile']" rel="tooltip" data-placement="bottom">{{getUser()}}</a>
                         <a class="nav-link" [routerLink]="['/cart']" rel="tooltip" data-placement="bottom"><mat-icon matBadge="{{itemCount}}" matBadgeColor="warn">shopping_basket</mat-icon></a>
                     </div> 
-                </div>
+                </li>
             </ul>
         </div>
     </div>
